Fixed gallery empty to full blinking loop by 1. forcing overflow-y: scroll 2. prevent rerender or relayout while gIsRenderingGallery is in progress 3. refined debouncing logic to skip full DOM reconstruction for Grid and List views during resizing and instead relying on high performance css responsiveness.

--- a/native/mediamanagerx_app/web/style.css
+++ b/native/mediamanagerx_app/web/style.css
@@ -801,7 +801,7 @@ main {
   align-items: flex-start;
   flex: 1;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
   background: var(--bg);
   position: relative;
 }
